--- a/DataLense.Rmd
+++ b/DataLense.Rmd
@@ -37,10 +37,11 @@ dateRP <- paste("January - June, 2025")
 
 # Defined district names
 District<-c("1", "2", "3")
+
 ```
 
 Sidebar {.sidebar}
-==============================
+===================
 
 ### An Example of Simple Community Health (SCH) Dashboard for a Town & a District (For Exercise)
 
@@ -50,9 +51,9 @@ Please try to review this dashboard and let's work as a team for its improvement
 
    *The best comes as a result of collaborative endeavor!*
    
-# Town X Dashboard (The Recent Month)
+# The Recent Month Data {data-navmenu="Town X"}
 
-## Column {.tableset data-width=500}
+## Column {data-width=550, .tabset}
 
 ### Chart- Population Pyramid
 
@@ -135,16 +136,14 @@ pyramidT<-function(Hypottowndata21T){
       plot.subtitle = element_text(hjust = 0.5),  # center subtitle
       plot.caption = element_text(hjust = 0,      # format caption text
                                   size = 11, 
-                                  face = "italic")) 
-  print(custom_color_theme)
+                                  face = "italic"))
+ ggplotly(custom_color_theme)
 }
 pyramidT(Hypottowndata21T)
 
 ```
 
-## Column {data-width=500}
-
-### Chart-Known Sickness {.no-padding}
+### Chart-Known Sickness
 
 ```{r}
 chartknsT<-function(Hypottowndata21T){
@@ -161,13 +160,12 @@ chartknsT<-function(Hypottowndata21T){
          x= "District",
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90))
-  
-  Known_Sickness_Chart
+ ggplotly(Known_Sickness_Chart)
 }
 chartknsT(Hypottowndata21T)
 ```
 
-### Chart- Current Sickness (symptoms){.no-padding}
+### Chart- Current Sickness (symptoms)
 
 ```{r}
 chartcurskT<-function(Hypottowndata21T){
@@ -186,12 +184,12 @@ chartcurskT<-function(Hypottowndata21T){
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90))
   
-  Current_Sickness_Chart
+ ggplotly(Current_Sickness_Chart)
 }
 chartcurskT(Hypottowndata21T)
 ```
 
-## Row
+## Column {data-width=450, .tabset}
 ### Chart - Sought Health Facility
 
 ```{r}
@@ -213,7 +211,7 @@ chartsouhfT<-function(Hypottowndata21T){
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90)) +
     coord_flip()
-  Sought_hf_Chart
+  ggplotly(Sought_hf_Chart)
 }
 chartsouhfT(Hypottowndata21T)
 ```
@@ -241,14 +239,14 @@ chartchpT<-function(Hypottowndata21T){
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90)) +
     coord_flip()
-  Main_PCHP_Chart
+ ggplotly(Main_PCHP_Chart)
 }
 chartchpT(Hypottowndata21T)
 ```
 
-# Town X Dashboard (Trend)
+# Trend Over Time Data{data-navmenu="Town X"}
 
-## Column {.tableset data-width=650}
+## Column {data-width=450, .tabset}
 
 ### Summary Table
 
@@ -268,14 +266,12 @@ stabT<- function(Hypottowndata21){
   
   stabT<-table1(~ Known_Sick + current_sick + sought_hf + Main_PCHP | Assess_month,
                 data=dfstabT, na.is.category = F, render.missing=NULL, topclass="Rtable1-zebra", overall=F, caption=caption, footnote=footnote)
-stabT
+  stabT
 }
 stabT(Hypottowndata21)
 ```
 
-## Column {data-width=350}
-
-### Line Graph - Known Sickness {.no-padding}
+### Line Graph - Known Sickness
 
 ```{r}
 # Display plot of trend of Known Sickness in a town by the assessment months 
@@ -302,12 +298,12 @@ lplotknsT<-function(Hypottowndata21){
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  Known_Sickness_plot
+  ggplotly(Known_Sickness_plot)
 }
 lplotknsT(Hypottowndata21)
 ```
 
-### Line Graph- Current Sickness (symptoms){.no-padding}
+### Line Graph- Current Sickness (symptoms)
 
 ```{r}
 # Trend of current Sicknesss (symptoms) of the hh members of the town
@@ -333,12 +329,12 @@ lplotcurskT<-function(Hypottowndata21){
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  current_Sickness_plot
+  ggplotly(current_Sickness_plot)
 }
 lplotcurskT(Hypottowndata21)
 ```
 
-## Row
+## Column {data-width=550, .tabset}
 ### Line Graph - Sought Health Facility
 
 ```{r}
@@ -367,7 +363,7 @@ lplotsouhfT<-function(Hypottowndata21){
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  Sought_hf_plot
+  ggplotly(Sought_hf_plot)
 }
 lplotsouhfT(Hypottowndata21)
 ```
@@ -399,14 +395,14 @@ lplotpchpT<-function(Hypottowndata21){
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  Main_PCHP_plot
+  ggplotly(Main_PCHP_plot)
 }
 lplotpchpT(Hypottowndata21)
 ```
 
-# District 1 Dashboard (The Recent Month)
+# The Recent Month Data{data-navmenu="District 1"}
 
-## Column {.tableset data-width=500}
+## Column {data-width=550, .tabset}
 
 ### Chart -1.1 Sex
 
@@ -432,20 +428,12 @@ crsexpie <- function(district_name) {
          subtitle = stringr::str_glue("Analysis of data \nn = {nrow(subtowndata0)} from a hypothetical data (hypottowndata20)")) +
     theme_void()+
     scale_fill_viridis_d()
+percentage_pie0   
 }
-
-#create pie of sex distribution for district 1
-piesexd1<-function(Hypottowndata21T){
-  plots<- lapply(District[[1]], crsexpie)
-  #Print the plot
-  for(i in seq_along(plots)){print(plots[[1]])}
-}
-piesexd1(Hypottowndata21T)
+crsexpie(District[[1]]) 
 ```
 
-## Column {data-width=500}
-
-### Chart-1.2 Known Sickness {.no-padding}
+### Chart-1.2 Known Sickness
 
 ```{r}
 crKnSbarch <- function(district_name) {
@@ -463,21 +451,16 @@ crKnSbarch <- function(district_name) {
     geom_col(position = "dodge") +
     labs(title = paste("District", district_name, "Household Members' with Known Sickness, Town X, Country X", dateRDLM),
          subtitle = stringr::str_glue("Analysis of a Hypothetical Community Health Data for Exercise \nn = {nrow(subtowndata0)} (Hypottowndata20.csv)"),
-         x= "Known_Sickness",
+         x= "Known Sickness",
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90)) 
+  ggplotly(Known_Sickness_Chart)
 }
 
-#create bchart of known sickness distribution for district 1
-barchKnSd1<-function(Hypottowndata21T){
-  bcharts<- lapply(District[[1]], crKnSbarch)
-  #Print the bchart
-  for(i in seq_along(bcharts)){print(bcharts[[1]])}
-}
-barchKnSd1(Hypottowndata21T)
+crKnSbarch(District[[1]]) 
 ```
 
-### Chart-1.3 Current Sickness (symptoms){.no-padding}
+### Chart-1.3 Current Sickness (symptoms)
 
 ```{r}
 curSbarch <- function(district_name) {
@@ -495,22 +478,17 @@ curSbarch <- function(district_name) {
     geom_col(position = "dodge") +
     labs(title = paste("District", district_name, "Household Members' with Current Sickness, Town X, Country X", dateRDLM),
          subtitle = stringr::str_glue("Analysis of a Hypothetical Community Health Data for Exercise \nn = {nrow(subtowndata0)} (Hypottowndata20.csv)"),
-         x= paste("District", district_name),
+         x= "Current Sickness",
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90)) +
     coord_flip()
+  ggplotly(Current_Sickness_Chart)
 }
 
-#create bchart of current sickness (symptoms) distribution for district 1
-barcurSd1<-function(Hypottowndata21T){
-  curSbarchs<- lapply(District[[1]], curSbarch)
-  #Print the bchart
-  for(i in seq_along(curSbarchs)){print(curSbarchs[[1]])}
-}
-barcurSd1(Hypottowndata21T)
+curSbarch(District[[1]]) 
 ```
 
-## Row
+## Column {data-width=450, .tabset}
 
 ### Chart -1.4 Sought Health Facility
 
@@ -531,18 +509,13 @@ souhfbarch <- function(district_name) {
     geom_col(position = "dodge") +
     labs(title = paste("District", district_name, "Household Members' Sought Health Facility for the Current Sickness, Town X, Country X", dateRDLM),
          subtitle = stringr::str_glue("Analysis of a Hypothetical Community Health Data for Exercise \nn = {nrow(distsouhfild0)} (Hypottowndata20.csv)"),
-         x= paste("District", district_name),
+         x= "Sought Health Facility",
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90))
+  ggplotly(Sought_hf_Chart)
 }
 
-#create bchart of sought health facility distribution for district 1
-barsouhfd1<-function(Hypottowndata21T){
-  souhfbarchs<- lapply(District[[1]], souhfbarch)
-  #Print the bchart
-  for(i in seq_along(souhfbarchs)){print(souhfbarchs[[1]])}
-}
-barsouhfd1(Hypottowndata21T)
+souhfbarch(District[[1]])
 ```
 
 ### Chart - 1.5 Main Percieved community health problem (Main_PCHP)
@@ -567,24 +540,19 @@ MPCHPbarch <- function(district_name) {
     geom_col(position = "dodge") +
     labs(title = paste("District", district_name, "Household Members' Main Perceived Community Health Problem,Town X, Country X", dateRDLM),
          subtitle = stringr::str_glue("Analysis of a Hypothetical Community Health Data for Exercise \nn = {nrow(Sumbydistchpfild0)} (Hypottowndata20.csv)"),
-         x= paste("District", district_name),
+         x= "Main_PCHP",
          y= "Household Members, %") +
     theme(axis.text.x = element_text(angle = 90)) +
     coord_flip()
+  ggplotly( Main_PCHP_Chart)
 }
 
-#create bchart of MPCHP distribution for district 1
-barMPCHPd1<-function(Hypottowndata21T){
-  MPCHPbarchs<- lapply(District[[1]], MPCHPbarch)
-  #Print the bchart
-  for(i in seq_along(MPCHPbarchs)){print(MPCHPbarchs[[1]])}
-}
-barMPCHPd1(Hypottowndata21T)
+MPCHPbarch(District[[1]])
 ```
 
-# District 1 Dashboard (Trend)
+# Trend Over Time Data{data-navmenu="District 1"}
 
-## Column {.tableset data-width=650}
+## Column {data-width=450, .tabset}
 
 ### Summary Table-1.1
 
@@ -609,9 +577,7 @@ stabD<- function(district_name){
 stabD(District[[1]]) 
 ```
 
-## Column {data-width=350}
-
-### Line Graph-1.1 Known Sickness {.no-padding}
+### Line Graph-1.1 Known Sickness
 
 ```{r}
 lplotKnSD <- function(district_name) {
@@ -638,19 +604,13 @@ lplotKnSD <- function(district_name) {
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  Known_Sickness_plot
+  ggplotly(Known_Sickness_plot)
 }
 
-#Trend of known sickness of district 1
-lplotKnSD1<-function(Hypottowndata21){
-  lplots<- lapply(District[[1]], lplotKnSD)
-  #Print the line plot
-  print(lplots[[1]])
-}
-lplotKnSD1(Hypottowndata21)
+lplotKnSD(District[[1]]) 
 ```
 
-### Line Graph-1.2 Current Sickness (symptoms){.no-padding}
+### Line Graph-1.2 Current Sickness (symptoms)
 
 ```{r}
 lplotcurSD <- function(district_name) {
@@ -677,19 +637,13 @@ lplotcurSD <- function(district_name) {
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  current_sickness_plot
+  ggplotly(current_sickness_plot)
 }
 
-#Trend of current sickness of district 1
-lplotcurSD1<-function(Hypottowndata21){
-  lplots<- lapply(District[[1]], lplotcurSD)
-  #Print the line plot
-  print(lplots[[1]])
-}
-lplotcurSD1(Hypottowndata21)
+lplotcurSD(District[[1]])
 ```
 
-## Row
+## Column {data-width=550, .tabset}
 
 ### Line Graph-1.3 Sought Health Facility
 
@@ -719,16 +673,10 @@ lplotsouhfD <- function(district_name) {
          x= "Month",
          y= "Household Members, %") +
     theme_classic()
-  sought_hf_plot
+  ggplotly(sought_hf_plot)
 }
 
-#Trend of sought health facility of district 1
-lplotsouhfD1<-function(Hypottowndata21){
-  lplots<- lapply(District[[1]], lplotsouhfD)
-  #Print the line plot
-  print(lplots[[1]])
-}
-lplotsouhfD1(Hypottowndata21)
+lplotsouhfD(District[[1]])
 ```
 
 ### Line Graph- 1.4 Main Percieved community health problem (Main_PCHP)
@@ -753,39 +701,33 @@ lplotMPCHPD <- function(district_name) {
          subtitle = stringr::str_glue("Analysis of a Hypothetical Community Health Data for Exercise (Hypottowndata20.csv)"),
          x= "Month",
          y= "Household Members, %") +
-    theme_classic()
-  Main_PCHP_plot
+    theme_classic() 
+  ggplotly(Main_PCHP_plot)
 }
 
-#Trend of Main_PCHP of district 1
-lplotMPCHPD1<-function(Hypottowndata21){
-  lplots<- lapply(District[[1]], lplotMPCHPD)
-  #Print the line plot
-  print(lplots[[1]])
-}
-lplotMPCHPD1(Hypottowndata21)
+lplotMPCHPD(District[[1]])
 ```
 
 # Pivot Table
 
-### Pivot Table of the recent month (dateRDLM) community health data of the household members in town X, country X 
+### Pivot Table of the recent month (`r dateRDLM`) community health data of the household members in town X, country X 
 
 ```{r}
 pt1<-function(Hypottowndata21T){
   
-  pt1<- (rpivotTable(Hypottowndata21T,
+  pt<- (rpivotTable(Hypottowndata21T,
                      aggrigatorName = "Count",
                      cols= "Agegr",
                      rows= "Sex",
                      renderName= "Heatmap"))
-  pt1
+  pt
 }
 pt1(Hypottowndata21T)
 ```
 
 # Data Table
 
-### Data Table of longitudinal (long form) Community Health Data of Town-X with its three Districts (named as 1, 2 and 3), Country x, dateRP
+### Data Table of longitudinal (long form) Community Health Data of Town-X with its three Districts (named as 1, 2 and 3), Country x, `r dateRP`
 
 ```{r}
 mydatatable<-function(Hypottowndata20){
